[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sha2 = "0.10.7"
uuid = { version = "1.4.0", features = ["v4"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.52.1", features = ["async-std", "tcp", "mdns", "gossipsub", "macros", "noise", "yamux"] }
libp2p-quic = { version = "0.8.0-alpha", features = ["async-std"] }
async-std = { version = "1.12", features = ["attributes"] }
hex = "0.4"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.5.0"
